src/test/ui/dep-graph/dep-graph-caller-callee.stderr
error: OK
  --> $DIR/dep-graph-caller-callee.rs:20:5
   |
LL |     #[rustc_then_this_would_need(typeck_tables_of)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no path from `x::x` to `typeck_tables_of`
  --> $DIR/dep-graph-caller-callee.rs:31:5
   |
LL |     #[rustc_then_this_would_need(typeck_tables_of)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

